Started Auto_CTF

--- a/MCForge_.csproj
+++ b/MCForge_.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Commands\punload.cs" />
     <Compile Include="CountdownGame.cs" />
     <Compile Include="CTFGame.cs" />
+    <Compile Include="CTF\Auto_CTF.cs" />
     <Compile Include="Economy.cs" />
     <Compile Include="ForgeBot.cs" />
     <Compile Include="GUI\EditText.cs">
